--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,13 @@ Reloj/Reloj/Debug/Reloj.map
 Reloj/Reloj/Debug/Reloj.o
 Reloj/Reloj/Debug/Reloj.srec
 Reloj/Reloj/Reloj.cproj
+Reloj/Reloj/Debug/Interrupcion.o
+Reloj/Reloj/Debug/main.o
+Reloj/Reloj/Debug/Interrupcion.d
+Reloj/Reloj/Debug/makedep.mk
+Reloj/Reloj/Debug/Makefile
+Reloj/Reloj/Debug/Reloj.elf
+Reloj/Reloj/Debug/Reloj.hex
+Reloj/Reloj/Debug/Reloj.lss
+Reloj/Reloj/Debug/Reloj.map
+Reloj/Reloj/Debug/Reloj.srec
