--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,14 @@ Reloj/Reloj/Debug/Reloj.hex
 Reloj/Reloj/Debug/Reloj.lss
 Reloj/Reloj/Debug/Reloj.map
 Reloj/Reloj/Debug/Reloj.srec
+Reloj/Reloj/Debug/makedep.mk
+Reloj/Reloj/Debug/Makefile
+Reloj/Reloj/Debug/Reloj.elf
+Reloj/Reloj/Debug/Reloj.hex
+Reloj/Reloj/Debug/Reloj.lss
+Reloj/Reloj/Debug/Reloj.map
+Reloj/Reloj/Debug/Reloj.srec
+Reloj/Reloj/Debug/Teclado.d
+Reloj/Reloj/Debug/Teclado.o
+Reloj/Reloj/Debug/main.o
+Reloj/Reloj/Reloj.cproj
