--- a/Reloj/Reloj/Debug/Makefile
+++ b/Reloj/Reloj/Debug/Makefile
@@ -40,7 +40,8 @@ C_SRCS +=  \
 ../Interrupcion.c \
 ../lcd.c \
 ../main.c \
-../Reloj.c
+../Reloj.c \
+../Teclado.c
 
 
 PREPROCESSING_SRCS += 
@@ -53,25 +54,29 @@ OBJS +=  \
 Interrupcion.o \
 lcd.o \
 main.o \
-Reloj.o
+Reloj.o \
+Teclado.o
 
 OBJS_AS_ARGS +=  \
 Interrupcion.o \
 lcd.o \
 main.o \
-Reloj.o
+Reloj.o \
+Teclado.o
 
 C_DEPS +=  \
 Interrupcion.d \
 lcd.d \
 main.d \
-Reloj.d
+Reloj.d \
+Teclado.d
 
 C_DEPS_AS_ARGS +=  \
 Interrupcion.d \
 lcd.d \
 main.d \
-Reloj.d
+Reloj.d \
+Teclado.d
 
 OUTPUT_FILE_PATH +=Reloj.elf
 
@@ -109,6 +114,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./Reloj.o: .././Reloj.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./Teclado.o: .././Teclado.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.6.364\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
