--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@ Reloj/Reloj/Debug/Teclado.d
 Reloj/Reloj/Debug/Teclado.o
 Reloj/Reloj/Debug/main.o
 Reloj/Reloj/Reloj.cproj
+Reloj/Reloj/Debug/Reloj.elf
+Reloj/Reloj/Debug/Reloj.hex
+Reloj/.vs/Reloj/v14/.atsuo
+Reloj/Reloj/Debug/Reloj.srec
+Reloj/Reloj/Debug/Reloj.map
+Reloj/Reloj/Debug/Reloj.lss
