mejorado el actualizar campo

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,12 @@ Reloj/.vs/Reloj/v14/.atsuo
 Reloj/Reloj/Debug/Reloj.srec
 Reloj/Reloj/Debug/Reloj.map
 Reloj/Reloj/Debug/Reloj.lss
+Reloj/Reloj/Debug/Reloj.elf
+Reloj/Reloj/Debug/Reloj.elf
+Reloj/Reloj/Debug/main.o
+Reloj/.vs/Reloj/v14/.atsuo
+Reloj/Reloj/Debug/Reloj.hex
+Reloj/Reloj/Debug/Reloj.lss
+Reloj/Reloj/Debug/Reloj.map
+Reloj/Reloj/Debug/Reloj.srec
+teclado4x4/.vs/teclado4x4/v14/.atsuo
