--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ Reloj/Reloj/Debug/Reloj.lss
 Reloj/Reloj/Debug/Reloj.map
 Reloj/Reloj/Debug/Reloj.srec
 teclado4x4/.vs/teclado4x4/v14/.atsuo
+Reloj/Reloj/Debug/Reloj.srec
+Reloj/Reloj/Debug/Reloj.map
+Reloj/Reloj/Debug/Reloj.lss
+Reloj/Reloj/Debug/Reloj.hex
+Reloj/Reloj/Debug/Reloj.elf
+Reloj/Reloj/Debug/main.o
+Reloj/Reloj/Debug/main.d
