--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,14 @@ Reloj/Reloj/Debug/Reloj.hex
 Reloj/Reloj/Debug/Reloj.elf
 Reloj/Reloj/Debug/main.o
 Reloj/Reloj/Debug/main.d
+Reloj/.vs/Reloj/v14/.atsuo
+Reloj/Last Loaded reloj.pdsbak
+Reloj/reloj.pdsprj.DESKTOP-4CCOVL2.Hernan.workspace
+Reloj/Reloj/Debug/main.o
+Reloj/Reloj/Debug/main.d
+Reloj/Reloj/Debug/Reloj.srec
+Reloj/Reloj/Debug/Reloj.map
+Reloj/Reloj/Debug/Reloj.lss
+Reloj/Reloj/Debug/Reloj.elf
+Reloj/Reloj/Debug/Reloj.hex
+Reloj/Reloj/RelojSimulacion.pdsprj.DESKTOP-4CCOVL2.Hernan.workspace
